Fix task detail view spacings

--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -12,11 +12,6 @@
     }
   }
 
-  .has-top-border {
-    border-top: 1px solid lighten($grey, 35%);
-    padding-top: .5em;
-  }
-
   h3 .button {
     vertical-align: middle;
   }
